--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<h2><a href="#">My Name is Brian Minjire</a></h2>
 									<p>I am a passionate developer but more importantly i am passionate about technology</p>
 								</header>
-								<a href="#" class="image main"><img src="images/annie_spratt.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/SELF.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://www.dropbox.com/scl/fi/2mm2k826oobciuu64nxha/brian-minjire-CURRICULUM-VITAE.docx?rlkey=ata4b1cfw5bw9nyabwm1dbmit&dl=0" 
 										class="button large">My Curriculum Vitae</a></li>
