--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
                 <a href="#">1.5min video<br /> </a>
               </h2>
             </header>
-
+            <a href="#" class="image fit"
+              ><img src="images/betterlife.png" alt=""
+            /></a>
             <p>an overview of an online hospital recruitment system.</p>
             <ul class="actions special">
               <li><a href="#" class="button">Check it out</a></li>
