--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
               <a
                 href="https://www.dropbox.com/scl/fi/2mm2k826oobciuu64nxha/brian-minjire-CURRICULUM-VITAE.docx?rlkey=ata4b1cfw5bw9nyabwm1dbmit&dl=0"
                 class="button large"
+                style="width: 50px; height: 50px"
                 >My Curriculum Vitae</a
               >
             </li>
@@ -89,12 +90,15 @@
           <article>
             <header>
               <h2>
-                <a href="#">1.5min video<br /> </a>
+                <a href="#"><br /> </a>
               </h2>
             </header>
-            <a href="#" class="image fit"
-              ><img src="images/betterlife.png" alt=""
-            /></a>
+            <a
+              href="https://www.dropbox.com/scl/fo/ffkaooh60jq3qh5zu1v3q/h?rlkey=ozajxop9hcwonohphzgtl959n&dl=0"
+              class="button large"
+              style="width: 50px; height: 50px"
+              >Capstone Project</a
+            >
             <p>an overview of an online hospital recruitment system.</p>
             <ul class="actions special">
               <li><a href="#" class="button">Check it out</a></li>
