--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </article>
 
         <div>
-          <header class="major"><h1>Capstone</h1></header>
+          <header class="major"><h1>Capstone Projects</h1></header>
         </div>
         <!-- Posts -->
         <section class="posts">
@@ -96,6 +96,7 @@
             <a
               href="https://www.dropbox.com/scl/fo/ffkaooh60jq3qh5zu1v3q/h?rlkey=ozajxop9hcwonohphzgtl959n&dl=0"
               class="button large"
+              style="width: 50px; height: 50px"
               >Capstone Project</a
             >
             <p>an overview of an online hospital recruitment system.</p>
