--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
               <a
                 href="https://www.dropbox.com/scl/fi/2mm2k826oobciuu64nxha/brian-minjire-CURRICULUM-VITAE.docx?rlkey=ata4b1cfw5bw9nyabwm1dbmit&dl=0"
                 class="button large"
-                style="width: 50px; height: 50px"
                 >My Curriculum Vitae</a
               >
             </li>
@@ -89,9 +88,6 @@
         <section class="posts">
           <article>
             <header>
-              <h2>
-                <a href="#"><br /> </a>
-              </h2>
             </header>
             <a
               href="https://www.dropbox.com/scl/fo/ffkaooh60jq3qh5zu1v3q/h?rlkey=ozajxop9hcwonohphzgtl959n&dl=0"
@@ -99,12 +95,11 @@
               style="width: 50px; height: 50px"
               >Capstone Project</a
             >
-            <p>an overview of an online hospital recruitment system.</p>
             <ul class="actions special">
-              <li><a href="#" class="button">Check it out</a></li>
+                  href="https://www.dropbox.com/scl/fi/nyy5wd1a3lhcbzflt1v1w/A-Journey-through-life.pptx?rlkey=zamwjfpwumblot9rn4639d05u&dl=0"
             </ul>
           </article>
-          <article>
+          <!-- <article>
             <header>
               <h2>
                 <a href="#">BeMyBudget<br /> </a>
@@ -117,7 +112,7 @@
             <ul class="actions special">
               <li><a href="#" class="button">Check it out</a></li>
             </ul>
-          </article>
+          </article> -->
         </section>
       </div>
 
