--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
               <a
                 href="https://www.dropbox.com/scl/fi/2mm2k826oobciuu64nxha/brian-minjire-CURRICULUM-VITAE.docx?rlkey=ata4b1cfw5bw9nyabwm1dbmit&dl=0"
                 class="button large"
+                style="width: fit-content; height: 50px"
                 >My Curriculum Vitae</a
               >
             </li>
@@ -88,15 +89,26 @@
         <section class="posts">
           <article>
             <header>
+              <!-- <h2>capstone</h2> -->
             </header>
             <a
               href="https://www.dropbox.com/scl/fo/ffkaooh60jq3qh5zu1v3q/h?rlkey=ozajxop9hcwonohphzgtl959n&dl=0"
               class="button large"
-              style="width: 50px; height: 50px"
+              style="width: fit-content; height: 50px"
               >Capstone Project</a
             >
+            <a href="#" class="image fit"
+              ><img src="images/capstone.PNG" alt=""
+            /></a>
+            <p>A presentation about me:</p>
             <ul class="actions special">
+              <li>
+                <a
                   href="https://www.dropbox.com/scl/fi/nyy5wd1a3lhcbzflt1v1w/A-Journey-through-life.pptx?rlkey=zamwjfpwumblot9rn4639d05u&dl=0"
+                  class="button"
+                  >Check it out</a
+                >
+              </li>
             </ul>
           </article>
           <!-- <article>
