--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
               about technology
             </p>
           </header>
-          <a href="#" class="image main"
+          <a href="#" class="image main" style="left: 200px"
             ><img src="images/SELF.jpg" alt=""
           /></a>
           <ul class="actions special">
             <li>
               <a
-                href="https://www.dropbox.com/scl/fi/2mm2k826oobciuu64nxha/brian-minjire-CURRICULUM-VITAE.docx?rlkey=ata4b1cfw5bw9nyabwm1dbmit&dl=0"
+                href="docs/CV-Resume.pdf"
                 class="button large"
                 style="width: fit-content; height: 50px"
                 >My Curriculum Vitae</a
