--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <ul class="actions special">
               <li>
                 <a
-                  href="https://www.dropbox.com/scl/fi/nyy5wd1a3lhcbzflt1v1w/A-Journey-through-life.pptx?rlkey=zamwjfpwumblot9rn4639d05u&dl=0"
+                  href="https://www.dropbox.com/scl/fo/ffkaooh60jq3qh5zu1v3q/h?rlkey=ozajxop9hcwonohphzgtl959n&dl=0"
                   class="button"
                   >Check it out</a
                 >
