--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <a href="#" class="image fit"
               ><img src="images/capstone.PNG" alt=""
             /></a>
-            <p>A presentation about me:</p>
+            <!-- <p>A presentation about me:</p> -->
             <ul class="actions special">
               <li>
                 <a
